--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Workshops</a></h3>
+										<h3><a href="workshops.html" class="link">Workshops</a></h3>
 										<p>decentralized autonomous organizations</p>
 									</header>
 								</article>
