--- a/classes.html
+++ b/classes.html
@@ -172,12 +172,8 @@
 				<footer id="footer">
 					<div class="inner">
 						<ul class="icons">
-							<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands alt fa-discord"><span class="label">Discord</span></a></li>
+							<li><a href="https://www.linkedin.com/company/eola-arts-incubator/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://discord.gg/BFSyxK6ZHb" class="icon brands alt fa-discord"><span class="label">Discord</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy;Eola Arts Incubator</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
