--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
 								</div>
 								<div class="inner">
 									<ul class="icons">
-										<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-										<li><a href="#" class="icon brands alt fa-discord"><span class="label">Discord</span></a></li>
+										<li><a href="https://www.linkedin.com/company/eola-arts-incubator/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://discord.gg/BFSyxK6ZHb" class="icon brands alt fa-discord"><span class="label">Discord</span></a></li>
 									</ul>
 							</section>
 						</section>
